# MLIR-Mini-dialect

./: CMakeLists.txt  README.md  ShapeInferenceOpInterfaces.cpp.inc  ShapeInferenceOpInterfaces.h.inc  run.sh
include/: CMakeLists.txt
include/Mini/: CMakeLists.txt  MiniBufferizableOps.h  MiniDialect.h  MiniDialect.td  MiniOps.h  MiniOps.td  Passes.h  Passes.td  ShapeInferenceInterface.h  TileMiniOpsPass.h
lib/Mini/: CMakeLists.txt  MiniBufferizableOps.cpp  MiniDialect.cpp  MiniOps.cpp  Passes.cpp  TileMiniOpsPass.cpp
test/: mini-example.mlir  tile-mini-ops.mlir
tools/mini-opt/: CMakeLists.txt  mini-opt.cpp
